--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
+    "i": "^0.3.7",
     "mysql2": "^3.14.1",
     "nestjs-typeorm-paginate": "^4.1.0",
+    "npm": "^11.4.1",
+    "otplib": "^12.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.24"
